Bug 506717 - "The server requires authentication" when asked for KDE Bugs login
Summary: "The server requires authentication" when asked for KDE Bugs login
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.4.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-07 11:48 UTC by Ángel Navarro
Modified: 2025-07-21 06:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The server requires authentication. (154.43 KB, image/png)
2025-07-07 11:48 UTC, Ángel Navarro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ángel Navarro 2025-07-07 11:48:51 UTC
Created attachment 183038 [details]
The server requires authentication.

SUMMARY
When following the "Send information to the developers" (the second one) after a crash, I'm prompted for my KDE Bugs credentials, which I put in and I'm greeted with the "The server requires authentication" and it doesn't let me go further, thus making it impossible to post the issue from there.

STEPS TO REPRODUCE
1. Have a crash (don't know if you can trigger it)
2. "Send information to the developers" (the second button)
3. Go through the guide
4. Type in you email and password when you're prompted

OBSERVED RESULT
"The server requires authentication" message appears in red and I can't go further (I made sure that my email and password are correct)

EXPECTED RESULT
I should be logged in and continue the report process

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.1

ADDITIONAL INFORMATION
Comment 1 Harald Sitter 2025-07-07 15:26:59 UTC
After some digging I think this message comes out of Qt when the server returns a 401 code. Which is to say it didn't like your credentials. If you have a password with special characters, can you try temporarily setting it to a simpler ascii letters only password and see if that works?

You can trigger the crash dialog by running kate and then triggering a segmentation fault like so:

killall -SEGV kate
Comment 2 Ángel Navarro 2025-07-08 01:33:05 UTC
I changed my password to an all low-cap, no numbers, no symbols and this time it did work.
The only special character my actual password has is the "@" symbol...
Comment 3 Harald Sitter 2025-07-08 05:33:34 UTC
Are you suuuuuuuuuuuper sure you didn't have a mistake in the password? Can you try again with your previous password?

I tried with multiple @ in the password but can't reproduce the problem unfortunately.

That being said, the login code needs changing to use the newer authentication system anyway, I guess we'll just end up doing that for 6.5.
Comment 4 Ángel Navarro 2025-07-08 06:22:01 UTC
Yes, I even copied it from Kickoff to be completely sure and it was correct... but this time it worked. Maybe there was some quirk with the password manager that got cleaned off when I changed the password. It did fail one extra time though (https://imgur.com/a/uZK2jgY), but at the second try, it did work.

Anyway, the error message should absolutely be something more specific and less confusing that actually explains that there was maybe some error on the password. Anyway, thanks for your help :D
Comment 5 Harald Sitter 2025-07-08 06:28:45 UTC
The error message is a bit unfortunate indeed, but has to do with how error handling is implemented and is a bit tricky to change. Though I guess that is the most immediate improvement we can make for 6.4.
Comment 6 Bug Janitor Service 2025-07-08 08:01:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/drkonqi/-/merge_requests/345
Comment 7 Harald Sitter 2025-07-21 06:09:37 UTC
Git commit 8c266dfb987e0f1d09783297fb2057f73f04983c by Harald Sitter.
Committed on 21/07/2025 at 06:09.
Pushed by sitter into branch 'master'.

bugzilla: prefer api errors over http errors

this should lead to more actionable error reporting on failed logins
since we get a 401 response with json payload.

M  +12   -2    src/bugzillaintegration/libbugzilla/apijob.cpp
M  +2    -0    src/bugzillaintegration/libbugzilla/autotests/connectiontest.cpp
M  +1    -1    src/bugzillaintegration/libbugzilla/autotests/data/error.http

https://invent.kde.org/plasma/drkonqi/-/commit/8c266dfb987e0f1d09783297fb2057f73f04983c
Comment 8 Harald Sitter 2025-07-21 06:39:34 UTC
Git commit c098730ecc43922f0b41517ecee37572f89f3913 by Harald Sitter.
Committed on 21/07/2025 at 06:09.
Pushed by sitter into branch 'Plasma/6.4'.

bugzilla: prefer api errors over http errors

this should lead to more actionable error reporting on failed logins
since we get a 401 response with json payload.


(cherry picked from commit 8c266dfb987e0f1d09783297fb2057f73f04983c)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +12   -2    src/bugzillaintegration/libbugzilla/apijob.cpp
M  +2    -0    src/bugzillaintegration/libbugzilla/autotests/connectiontest.cpp
M  +1    -1    src/bugzillaintegration/libbugzilla/autotests/data/error.http

https://invent.kde.org/plasma/drkonqi/-/commit/c098730ecc43922f0b41517ecee37572f89f3913