bugzilla: prefer api errors over http errors

this should lead to more actionable error reporting on failed logins
since we get a 401 response with json payload.

BUG: 506717